grammar.js
    unit: $ => repeat(choice(
      $._query,
      $._update
    )),

    _query: $ => seq(
      optional($.prologue),
      choice(
        $.select_query,
        $.construct_query,
        $.describe_query,
        $.ask_query,
      ),
      optional($.values_clause)
    ),

    // [3]
    // [29]
    // [30]
    _update: $ => seq(
      optional($.prologue),
      seq(
        choice(
          $.load,
          $.clear,
          $.drop,
          $.add,
          $.move,
          $.copy,
          $.create,
          $.insert_data,
          $.delete_data,
          $.delete_where,
          $.modify
        ),
        optional(seq(
          ';',
          $._update
        ))
      )
    ),

    // [4]
    select_query: $ => seq(
      $.select_clause,
      repeat($.dataset_clause),
      $.where_clause,
      optional($.solution_modifier)
    ),

    // [8]
    select_clause: $ => seq(
      'SELECT'.toCaseInsensitiv(),
      optional(choice(
        'DISTINCT'.toCaseInsensitiv(),
        'REDUCED'.toCaseInsensitiv()
      )),
      choice(
        repeat1(choice(
          $.var,
          seq('(', $._expression, 'AS'.toCaseInsensitiv(), $.var, ')')
        )),
        '*'
      )
    ),

    // [10]
    dataset_clause: $ => seq(
      'FROM'.toCaseInsensitiv(),
      choice(
        $.default_graph_clause,
        $.named_graph_clause
      )
    ),

    // [14]
    // [16]
    default_graph_clause: $ => field('source_selector', $._iri),

    // [15]
    // [16]
    named_graph_clause: $ => seq(
      'NAMED'.toCaseInsensitiv(),
      field('source_selector', $._iri)
    ),

    // [17]
    where_clause: $ => seq(
      optional('WHERE'.toCaseInsensitiv()),
      $.group_graph_pattern
    ),

    // [18]
    solution_modifier: $ => choice(
      // Tree-sitter does not support syntactic rules that match the empty string
      seq(
        $.group_clause,
        optional($.having_clause),
        optional($.order_clause),
        optional($.limit_offset_clauses)
      ),
      seq(
        optional($.group_clause),
        $.having_clause,
        optional($.order_clause),
        optional($.limit_offset_clauses)
      ),
      seq(
        optional($.group_clause),
        optional($.having_clause),
        $.order_clause,
        optional($.limit_offset_clauses)
      ),
      seq(
        optional($.group_clause),
        optional($.having_clause),
        optional($.order_clause),
        $.limit_offset_clauses
      ),
    ),

    // [19]
    group_clause: $ => seq(
      'GROUP'.toCaseInsensitiv(),
      'BY'.toCaseInsensitiv(),
      repeat1($.group_condition)
    ),

    // [20]
    group_condition: $ => choice(
      $._build_in_call,
      $.function_call,
      seq(
        '(',
        $._expression,
        optional(seq('AS'.toCaseInsensitiv(), $.var)),
        ')'
      ),
      $.var
    ),

    // [21]
    having_clause: $ => seq(
      'HAVING'.toCaseInsensitiv(),
      repeat1($.having_condition)
    ),

    // [22]
    having_condition: $ => $._constraint,

    // [23]
    order_clause: $ => seq(
      'ORDER'.toCaseInsensitiv(),
      'BY'.toCaseInsensitiv(),
      repeat1($.order_condition)
    ),

    // [24]
    order_condition: $ => choice(
      seq(
        choice('ASC'.toCaseInsensitiv(), 'DESC'.toCaseInsensitiv()),
        $.bracketted_expression
      ),
      choice(
        $._constraint,
        $.var
      )
    ),

    // [25]
    limit_offset_clauses: $ => choice(
      seq($.limit_clause, optional($.offset_clause)),
      seq($.offset_clause, optional($.limit_clause)
      )
    ),

    // [26]
    limit_clause: $ => seq(
      'LIMIT'.toCaseInsensitiv(),
      $.integer
    ),

    // [27]
    offset_clause: $ => seq(
      'OFFSET'.toCaseInsensitiv(),
      $.integer
    ),

    // [28]
    values_clause: $ => seq(
      'VALUES'.toCaseInsensitiv(),
      $._data_block
    ),

    // [31]
    group_graph_pattern: $ => seq(
      '{',
      choice(
        $.sub_select,
        seq(
          optional($.triples_block),
          repeat(seq(
            $._graph_pattern_not_triples,
            optional('.'),
            optional($.triples_block)
          ))
        )
      ),
      '}'
    ),

    // [55]
    triples_block: $ => seq(
      $.triples_same_subject_path,
      repeat(seq(
        '.',
        $.triples_same_subject_path
      )),
      optional('.')
    ),

    // [56]
    _graph_pattern_not_triples: $ => choice(
      $.group_or_union_graph_pattern,
      $.optional_graph_pattern,
      $.minus_graph_pattern,
      $.graph_graph_pattern,
      $.service_graph_pattern,
      $.filter,
      $.bind,
      $.inline_data
    ),

    // [57]
    _data_block: $ => choice(
      $.inline_data_one_var,
      $.inline_data_full
    ),

    // [63]
    inline_data_full: $ => seq(
      choice(
        $.nil,
        seq('(', repeat1($.var), ')')
      ),
      '{',
      repeat(choice(
        seq('(', repeat1($._data_block_value), ')'),
        $.nil
      )),
      '}'
    ),

    // [65]
    _data_block_value: $ => choice(
      $._iri,
      $.rdf_literal,
      $._numeric_literal,
      $.boolean_literal,
      'UNDEF'.toCaseInsensitiv()
    ),

    // [66]
    _constraint: $ => choice(
      $.bracketted_expression,
      $._build_in_call,
      $.function_call
    ),

    // [70]
    function_call: $ => seq(
      field('identifier', $._iri),
      $.arg_list
    ),

    // [71]
    arg_list: $ => choice(
      $.nil,
      seq(
        '(',
        optional('DISTINCT'.toCaseInsensitiv()),
        $._expression,
        repeat(seq(',', $._expression)),
        ')'
      )
    ),

    // [72]
    triples_same_subject: $ => choice(
      seq(
        $._var_or_term,
        $.property_list
      ),
      seq(
        $._triples_node,
        optional($.property_list)
      )
    ),

    // [77]
    // [78]
    property_list: $ => seq(
      field('predicate', choice(
        $._var_or_iri,
        'a'
      )),
      $.object_list,
      repeat(
        seq(
          ';',
          optional(seq(
            field('predicate', choice(
              $._var_or_iri,
              'a'
            )),
            $.object_list
          ))
        )
      )
    ),

    // [79]
    // [80]
    object_list: $ => seq(
      $._graph_node,
      repeat(seq(',', $._graph_node))
    ),

    // [81]
    // [82]
    path_element: $ => seq(
      optional($.path_inverse),
      $._primary_path,
      optional($.path_mod)
    ),

    // [92]
    _primary_path: $ => choice(
      $._iri,
      'a',
      seq('!', $.path_negated_property_set),
      seq('(', $._path, ')')
    ),

    // [95]
    _triples_node: $ => choice(
      $.collection,
      $.blank_node_property_list
    ),

    // [99]
    blank_node_property_list: $ => seq(
      '[',
      $.property_list,
      ']'
    ),

    // [100]
    _graph_node: $ => choice(
      $._var_or_term,
      $._triples_node
    ),

    // [105]
    _var_or_term: $ => choice(
      $.var,
      $._graph_term
    ),

    // [107]
    _var_or_iri: $ => choice(
      $.var,
      $._iri,
    ),

    // [108, 143, 144, 166]
    var: $ => token(seq(
      choice(
        '?',
        '$'
      ),
      choice(
        ...PN_CHARS_U,
        /[0-9]/
      ),
      repeat(choice(
        ...PN_CHARS_U,
        /[0-9]/,
        /[\u00B7]/,
        /[\u0300-\u036F]/,
        /[\u203F-\u2040]/
      ))
    )),

    // [109]
    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression
    ),

    // [110 - 117]
    binary_expression: $ => choice(
      // conditional
      prec.left(seq($._expression, '||', $._expression)),
      prec.left(1, seq($._expression, '&&', $._expression)),
      // relational
      prec.left(2, seq($._expression, '=', $._expression)),
      prec.left(2, seq($._expression, '<', $._expression)),
      prec.left(2, seq($._expression, '>', $._expression)),
      prec.left(2, seq($._expression, '<=', $._expression)),
      prec.left(2, seq($._expression, '>=', $._expression)),
      prec.left(2, seq($._expression, 'IN'.toCaseInsensitiv(), $.expression_list)),
      prec.left(2, seq($._expression, 'NOT'.toCaseInsensitiv(), 'IN'.toCaseInsensitiv(), $.expression_list)),
      // numeric
      prec.left(3, seq($._expression, '+', $._expression)),
      prec.left(3, seq($._expression, '-', $._expression)),
      prec.left(4, seq($._expression, '*', $._expression)),
      prec.left(4, seq($._expression, '/', $._expression)),
    ),

    // [118]
    unary_expression: $ => choice(
      seq('!', $._primary_expression),
      seq('+', $._primary_expression),
      seq('-', $._primary_expression),
    ),

    // [119]
    _primary_expression: $ => choice(
      $.bracketted_expression,
      $._build_in_call,
      $._iri_or_function,
      $.rdf_literal,
      $._numeric_literal,
      $.boolean_literal,
      $.var
    ),

    // [120]
    bracketted_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    // [121]
    _build_in_call: $ => choice(
      $.build_in_function,
      $.aggregate,
      $.exists_func,
      $.not_exists_func,
      $.substring_expression,
      $.string_replace_expression,
      $.regex_expression,
    ),

    rdf_literal: $ => seq(
      field('value', $.string),
      optional(choice(
        $.lang_tag,
        field('datatype', seq('^^', $._iri))
      ))
    ),

    boolean_literal: $ => choice(
      'true',
      'false'
    ),


    // [135]
    string: $ => choice(
      $._string_literal1,
      $._string_literal2,
      $._string_literal_long1,
      $._string_literal_long2,
    ),

    // [136]
    _iri: $ => choice(
      $.iri_reference,
      $.prefixed_name
    ),


    // [137]
    // [141]
    prefixed_name: $ => seq(
      $.namespace,
      optional($.pn_local)
    ),

    // [138]
    iri_reference: $ => token(seq(
      '<',
      /([^<>"{}|^`\\\x00-\x20])*/,
      '>'
    )),

    // [140]
    namespace: $ => seq(
      optional($.pn_prefix),
      ':'
    ),

    // [142]
    lang_tag: $ => token(seq(
      '@', /[a-zA-Z]+/,
      repeat(seq('-', /[a-zA-Z0-9]+/))
    )),

    // [146]
    integer: $ => token(/[0-9]+/),

    // [147]
    decimal: $ => token(seq(/[0-9]*/, '.', /[0-9]+/)),

    // [148]
    // [155]
    double: $ => token(choice(
      seq(/[0-9]+/, '.', /[0-9]*/, seq(/[eE]/, /[+-]?/, /[0-9]+/)),
      seq('.', /[0-9]+/, seq(/[eE]/, /[+-]?/, /[0-9]+/)),
      seq(/[0-9]+/, seq(/[eE]/, /[+-]?/, /[0-9]+/))
    )),

    // [156]
    _string_literal1: $ => seq(
      "'",
      repeat(choice(
        /[^\x27\x5C\x0A\x0D]/,
        $.echar
      )),
      "'"
    ),

    // [157]
    _string_literal2: $ => seq(
      '"',
      repeat(choice(
        /[^\x22\x5C\x0A\x0D]/,
        $.echar
      )),
      '"',
    ),

    // [158]
    _string_literal_long1: $ => seq(
      "'''",
      repeat(seq(
        optional(choice(
          "'",
          "''",
        )),
        choice(
          /[^'\\]/,
          $.echar
        )
      )),
      "'''",
    ),

    // [159]
    _string_literal_long2: $ => seq(
      '"""',
      repeat(seq(
        optional(choice(
          '"',
          '""',
        )),
        choice(
          /[^"\\]/,
          $.echar
        )
      )),
      '"""',
    ),
    
    // [160]
    echar: $ => /\\[tbnrf\\"']/,


    // [161]
    nil: $ => token(seq(
      '(',
      repeat(choice(...WS)),
      ')'
    )),

    // [163]
    anon: $ => token(seq(
      '[',
      repeat(choice(...WS)),
      ']'
    )),

    // [168]
    pn_prefix: $ => token(seq(
      choice(...PN_CHARS_BASE),
      optional(seq(
        repeat(choice(
          ...PN_CHARS,
          '.'
        )),
        choice(...PN_CHARS)
      ))
    )),

    // [169]
    pn_local: $ => token.immediate(seq(
      choice(
        ...PN_CHARS_U,
        ':',
        /[0-9]/,
        seq('%', choice(...HEX), choice(...HEX)),
        ...PN_LOCAL_ESC
      ),
      optional(seq(
        repeat(choice(
          ...PN_CHARS,
          '.',
          ':',
          seq('%', choice(...HEX), choice(...HEX)),
          ...PN_LOCAL_ESC
        )),
        choice(
          ...PN_CHARS,
          ':',
          seq('%', choice(...HEX), choice(...HEX)),
          ...PN_LOCAL_ESC
        )
      ))
    )),
  }
});
