test/corpus/expressions.txt
=================
Unary expression
=================

SELECT ( -?a AS $x ) {}

---

(unit
  (select_query 
    (select_clause 
      (unary_expression
        (var))
      (var))
    (where_clause
      (group_graph_pattern)))) 

==================
Binary expression
==================

SELECT ( ?a + ?b AS $x ) {}

---

(unit
  (select_query 
    (select_clause 
      (binary_expression
        (var)
        (var))
      (var))
    (where_clause
      (group_graph_pattern))))

==================
Precedence levels
==================

SELECT ( ?a + ?b * 1 AS $x ) {}

---

(unit
  (select_query 
    (select_clause 
      (binary_expression
        (var)
        (binary_expression
          (var)
          (integer)))
      (var))
    (where_clause
      (group_graph_pattern))))

===================
Extension function
===================

SELECT ( foo:bar(?a, 1)  AS ?x ) {}

---

(unit
  (select_query
    (select_clause 
      (function_call
        identifier: (prefixed_name (namespace (pn_prefix)) (pn_local))
        arguments: (arg_list (var) (integer))) (var))
    (where_clause (group_graph_pattern))))
